# a3em-ai

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt
microesc/: __init__.py  ops_compat.py
microesc/classification/: Resnet50.py  Yamnet.py
microesc/datasets/: DirectoryDataSet.py  RavenProDataSet.py
microesc/detection/: SpectralFluxDetector.py  __init__.py
microesc/tools/: __init__.py  compat.py  plotting.py
tests/: SpectralFluxDetector.py  TestResnet50.py  TestYamnet.py
